Sto facendo la convalida del form di ModificaDati.jsp, ma non funziona la pagina in quanto c'è un errore in UpdateProfileServlet.java, riga 39 riguardo la data di nascita

--- a/src/main/webapp/css/ModificaDati.css
+++ b/src/main/webapp/css/ModificaDati.css
@@ -14,6 +14,12 @@ h2 {
     text-align: center; /* Centra il testo del titolo */
 }
 
+.error {
+    color: red !important;
+    font-size: 14px !important;
+    margin: 10px 0;
+}
+
 /* Stile per il contenitore del modulo */
 .form-container {
     background-color: #ffffff;
