Ho risolto un problema per cui non mi era consentito eliminare una carta di credito salvata

--- a/src/main/webapp/css/Info.css
+++ b/src/main/webapp/css/Info.css
@@ -144,6 +144,10 @@ body {
     .slideshow-container {
         max-width: 80%;
     }
+
+    .materials-section {
+        flex-direction: column;
+    }
 }
 
 /* Tablet devices */
